[gd_scene load_steps=2 format=3 uid="uid://blec2pyy0f08v"]

[ext_resource type="Script" uid="uid://ci4tbsten4can" path="res://scenes/ability/base_ability.gd" id="1_2mqch"]

[node name="BaseAbility" type="Node2D"]
process_mode = 1
y_sort_enabled = true
script = ExtResource("1_2mqch")

[node name="LoopParticles" type="CPUParticles2D" parent="."]
y_sort_enabled = true
emitting = false

[node name="ImpactParticles" type="CPUParticles2D" parent="."]
y_sort_enabled = true
emitting = false
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]

[node name="AreaOfEffect" type="Area2D" parent="."]
collision_mask = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaOfEffect"]

[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="AreaOfEffect" to="." method="_on_area_of_effect_body_entered"]
